--- a/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Diagnostics.cshtml
@@ -27,6 +27,7 @@
 <h3>History</h3>
 <ul>
     <li>@Html.ActionLink("Songs sorted by Modified date", "sort", "song", new {sortOrder = "Modified_desc"}, null)</li>
+    <li>@Html.ActionLink("Songs sorted by Created date", "sort", "song", new { sortOrder = "Created_desc" }, null)</li>
 </ul>
 
 <h3>Status</h3>
