--- a/DanceCalc/m4d/Views/Account/SignUp.cshtml
+++ b/DanceCalc/m4d/Views/Account/SignUp.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-8">
         <section id="registerForm">
-            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("SignUp", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
                 <h4>Create a new account.</h4>
