--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -52,10 +52,7 @@
             Email
         </th>
         <th>
-            Signed Up
-        </th>
-        <th>
-            Signed In
+            Date
         </th>
         <th>
             Roles
@@ -71,12 +68,6 @@
         </th>
         <th>
             AFC
-        </th>
-        <th>
-            LL
-        </th>
-        <th>
-            Columns
         </th>
         <th></th>
     </tr>
@@ -118,17 +109,6 @@
             @item.StartDate.ToString("d")
         </td>
         <td>
-            @if (item.LastActive == DateTime.Parse("1/1/1900"))
-            {
-                @:Never
-            }
-            else
-            {
-                @item.LastActive.ToString("d")
-            }
-
-        </td>
-        <td>
             @string.Join(",",Model.GetRoles(item.Id))
         </td>
         <td>
@@ -142,12 +122,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AccessFailedCount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ListLength)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ColumnDefaults)
         </td>
         <td>
             @Html.ActionLink("Change Roles", "ChangeRoles", new { id = item.Id }),
