--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -27,28 +27,29 @@
     {
         @Html.AntiForgeryToken()
         Html.RenderPartial("_ListSongs", @Model, ViewData);
-        <div class="row col-xs-12">
-            <input type="hidden" name="filter" value="@filter" />
-            <input type="submit" name="action" value="Merge" class="btn btn-" />
-            <input type="submit" name="action" value="Delete" class="btn" />
-            <input type="submit" name="action" value="CleanupAlbums" class="btn" />
-            @Html.ActionLink("Add New Song", "Create", null, new { @class = "btn btn-default", role = "button" })
-            @Html.ActionLink("ITunes Batch", "BatchMusicService", new { filter, type = "I", count = 50 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Spotify Batch", "BatchMusicService", new { filter, type = "S", count = 50 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter, type = "A", count = 50 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter, type = "-", count = 50 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Canonical (S)", "BatchMusicService", new { filter, type = "-", count = 50, options = "S" }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Canonical (R)", "BatchMusicService", new { filter, type = "-", count = 50, options = "R" }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Clean Services", "BatchCleanService", new { filter, count = -1 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Clear Update", "BatchClearUpdate", new { filter, count = -1 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Backup List", "BackupTail", "Admin", new { filter, count = -1 }, new { @class = "btn btn-default", role = "button" })
-            @Html.ActionLink("JSON", "BackupJson", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
-            @Html.ActionLink("Update User Tags", "RebuildUserTags", "Admin", new { filter, update = true }, new { @class = "btn btn-default", role = "button" })
-            @Html.ActionLink("Update Tags", "RebuildTags", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
-            @Html.ActionLink("Update Tag Summaries", "UpdateTagSummaries", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
-            @Html.ActionLink("Echo Batch", "BatchEchoNest", new { filter, count = 1000 }, new { @class = "btn btn-warning", role = "button" })
-            @Html.ActionLink("Sample Batch", "BatchSamples", new { filter, count = 1000 }, new { @class = "btn btn-warning", role = "button" })
-        </div>
+    <div class="row col-xs-12">
+        <input type="hidden" name="filter" value="@filter" />
+        <input type="submit" name="action" value="Merge" class="btn btn-" />
+        <input type="submit" name="action" value="Delete" class="btn" />
+        <input type="submit" name="action" value="CleanupAlbums" class="btn" />
+        @Html.ActionLink("Add New Song", "Create", null, new { @class = "btn btn-default", role = "button" })
+        @Html.ActionLink("ITunes Batch", "BatchMusicService", new { filter, type = "I", count = 50 }, new { @class = "btn btn-success", role = "button" })
+        @Html.ActionLink("Spotify Batch", "BatchMusicService", new { filter, type = "S", count = 50 }, new { @class = "btn btn-success", role = "button" })
+        @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter, type = "A", count = 50 }, new { @class = "btn btn-success", role = "button" })
+        @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter, type = "-", count = 50 }, new { @class = "btn btn-success", role = "button" })
+        @Html.ActionLink("Canonical (S)", "BatchMusicService", new { filter, type = "-", count = 50, options = "S" }, new { @class = "btn btn-success", role = "button" })
+        @Html.ActionLink("Canonical (R)", "BatchMusicService", new { filter, type = "-", count = 50, options = "R" }, new { @class = "btn btn-success", role = "button" })
+        @Html.ActionLink("Clean Services", "BatchCleanService", new { filter, count = -1 }, new { @class = "btn btn-success", role = "button" })
+        @Html.ActionLink("Clean Spotify", "BatchCleanService", new { filter, type="SG", count = -1 }, new { @class = "btn btn-success", role = "button" })
+        @Html.ActionLink("Clear Update", "BatchClearUpdate", new { filter, count = -1 }, new { @class = "btn btn-success", role = "button" })
+        @Html.ActionLink("Backup List", "BackupTail", "Admin", new { filter, count = -1 }, new { @class = "btn btn-default", role = "button" })
+        @Html.ActionLink("JSON", "BackupJson", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
+        @Html.ActionLink("Update User Tags", "RebuildUserTags", "Admin", new { filter, update = true }, new { @class = "btn btn-default", role = "button" })
+        @Html.ActionLink("Update Tags", "RebuildTags", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
+        @Html.ActionLink("Update Tag Summaries", "UpdateTagSummaries", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
+        @Html.ActionLink("Echo Batch", "BatchEchoNest", new { filter, count = 1000 }, new { @class = "btn btn-warning", role = "button" })
+        @Html.ActionLink("Sample Batch", "BatchSamples", new { filter, count = 1000 }, new { @class = "btn btn-warning", role = "button" })
+    </div>
     }
 }
 else
