--- a/m4d/Views/Song/Details.cshtml
+++ b/m4d/Views/Song/Details.cshtml
@@ -9,13 +9,14 @@
 
 <div class="row">
     <div id="songDetails" class="col-md-12">
-        @UserHelper.UndoUser(Html,Model,filter)
+        @UserHelper.UndoUser(Html, Model, filter)
         @if (User.IsInRole("showDiagnostics"))
         {
-            @Html.ActionLink("Edit", "Edit", new {id = Model.SongId, filter}, new {@class = "btn btn-small btn-default", role = "button"})
-            @Html.ActionLink("Delete", "Delete", new {id = Model.SongId, filter}, new {@class = "btn btn-small btn-default", role = "button"})
+            @Html.ActionLink("Edit", "Edit", new { id = Model.SongId, filter }, new { @class = "btn btn-small btn-default", role = "button" })
+            @Html.ActionLink("Delete", "Delete", new { id = Model.SongId, filter }, new { @class = "btn btn-small btn-default", role = "button" })
             @Html.ActionLink("Cleanup Albums", "CleanupAlbums", new { id = Model.SongId, filter }, new { @class = "btn btn-small btn-default", role = "button" })
             @Html.ActionLink("Cleanup Purchase", "CleanMusicServices", new { id = Model.SongId, filter }, new { @class = "btn btn-small btn-default", role = "button" })
+            @Html.ActionLink("Cleanup Spotify", "CleanMusicServices", new { id = Model.SongId, type="SG", filter }, new { @class = "btn btn-small btn-default", role = "button" })
             @Html.ActionLink("Rebuild Ratings", "UpdateRatings", new { id = Model.SongId, filter }, new { @class = "btn btn-small btn-default", role = "button" })
         }
     </div>
